[package]
name = "odoh-rs"
version = "0.1.10"
authors = ["Tanya Verma <tverma@cloudflare.com>"]
edition = "2018"
license = "BSD-2-Clause"
description = "Rust implementation of the Oblivious DNS over HTTPS (ODoH) protocol draft-06"
repository = "https://github.com/cloudflare/odoh-rs/"
keywords = ["odoh", "protocols", "dns", "doh", "privacy"]
categories = ["network-programming", "cryptography"]

[dependencies]
aes-gcm = "0.8"
anyhow = "1"
bincode2 = "2.0.1"
hkdf = "0.10"
hpke = "0.5.0"
rand = "0.7"
serde = { version = "1.0", features = [ "derive" ] }
serde_repr = "0.1"

[dev-dependencies]
criterion = "0.3"
hex = "0.4"
serde_json = "1.0"
tokio = { version = "0.2", features = [ "full" ] }

[[bench]]
name = "odoh_bench"
harness = false
