[package]
name = "odoh-rs"
version = "0.2.0-alpha.1"
authors = ["Tanya Verma <tverma@cloudflare.com>"]
edition = "2018"
license = "BSD-2-Clause"
description = "Rust implementation of the Oblivious DNS over HTTPS (ODoH) protocol draft-06"
repository = "https://github.com/cloudflare/odoh-rs/"
keywords = ["odoh", "protocols", "dns", "doh", "privacy"]
categories = ["network-programming", "cryptography"]

[dependencies]
aes-gcm = { version = "0.8", features = [ "std" ] }
bytes = "1.0"
hkdf = "0.10"
hpke = { version = "0.5.1", features = [ "std" ] }
rand = "0.8"
thiserror = "1.0"

[dev-dependencies]
anyhow = "1"
clap = "3.0.0-beta.2"
criterion = "0.3"
domain = "0.5"
env_logger = "0.8"
hex = "0.4"
log = "0.4"
reqwest = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = [ "full" ] }

[[bench]]
name = "odoh_bench"
harness = false
