[package]
name = "odoh-rs"
version = "1.0.0"
authors = ["Tanya Verma <tverma@cloudflare.com>"]
edition = "2018"
license = "BSD-2-Clause"
description = "Rust implementation of the Oblivious DNS over HTTPS (ODoH) protocol version 1"
repository = "https://github.com/cloudflare/odoh-rs/"
keywords = ["odoh", "protocols", "dns", "doh", "privacy"]
categories = ["network-programming", "cryptography"]
include = ["/src", "/examples", "README.md", "LICENSE"]

[dependencies]
aes-gcm = { version = "0.10", features = [ "std" ] }
bytes = "1.0"
hkdf = "0.12"
hpke = { version = "0.10", features = [ "std", "x25519" ], default-features = false }
rand = { version = "0.8", features = [ "std_rng" ], default-features = false }
thiserror = "1.0"

[dev-dependencies]
anyhow = "1"
clap = { version = "3.2", features = ["derive"] }
criterion = "0.3"
domain = "0.6"
env_logger = "0.9"
hex = "0.4"
log = "0.4"
rand = "0.8"
reqwest = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = [ "full" ] }

[[bench]]
name = "odoh_bench"
path = "benches/odoh_bench.rs"
harness = false
