[package]
name = "odoh-rs-fuzz"
version = "0.0.0"
publish = false
edition = "2018"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
rand = "0.8.5"

[dependencies.odoh-rs]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "decrypt"
path = "fuzz_targets/decrypt.rs"
test = false
doc = false
